Menu now hides away

--- a/about.html
+++ b/about.html
@@ -6,6 +6,9 @@
     <meta http-equiv="content-type" content="text/html">
     <title>Владимир Маркиев в соцсетях</title>
     
+    <!-- Preload fonts -->
+    <link rel="preload" href="style_fonts.css" as="style">
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="style_main.css">
     <link rel="stylesheet" href="style_nav.css">
@@ -40,17 +43,18 @@
     <!-- Favicons -->
 
     <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" src="js_metrika.js">
+    <script src="js_metrika.js">
     </script>
     <noscript>
         <div><img src="https://mc.yandex.ru/watch/62734534" style="position:absolute; left:-9999px;" alt="" /></div>
     </noscript>
     <!-- /Yandex.Metrika counter -->
 
-    <script type="text/javascript" src="js_nav.js">
+    <script src="js_nav.js">
     </script>
 
 </head>
+
 <a name="top"></a>
 
 <body>
@@ -64,22 +68,21 @@
         <a tabindex="5" href="skills.html">Желаемая должность</a>
         <a tabindex="6" href="cases.html">Портфолио</a>
     </div>
-
-    <div class="main">
-        <div class="header">
-            <nav>
-                <ul class="breadcrumb">
-                <!-- КНОПКА МЕНЮ -->
-                    <li>
-        <button class="openbtn" onclick="openNav()">Открыть меню</button>
-                    </li>
-                <!-- КОНЕЦ МЕНЮ -->
-                    <li><a tabindex="7" href="index.html">Главная</a></li>
-                    <li>Обо мне</li>
-                </ul>
-            </nav>
-        </div>
+    <ul class="breadcrumb">
+        <!-- КНОПКА МЕНЮ -->
+        <li>
+            <button class="openbtn" onclick="openNav()">Открыть меню</button>
+        </li>
+        <li>
+            <a tabindex="7" href="index.html">Главная</a>
+        </li>
+        <li>
+            <a href="#top">Обо мне</a>
+        </li>
+    </ul>
+    <!-- КОНЕЦ МЕНЮ -->
     
+    <div class="main">
         <div class="content">
             <h1 class="h1">Владимир Маркиев — человек или сотрудник</h1>
             <h2 class="h2">Откуда такой классный</h2>
