--- a/education.html
+++ b/education.html
@@ -6,6 +6,9 @@
     <meta http-equiv="content-type" content="text/html">
     <title>Образование. Владимир Маркиев</title>
 
+    <!-- Preload fonts -->
+    <link rel="preload" href="style_fonts.css" as="style">
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="style_main.css">
     <link rel="stylesheet" href="style_nav.css">
@@ -56,32 +59,31 @@
     <!-- МЕНЮ -->
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0);" class="closebtn" onclick="closeNav()">X</a>
-       
-            <a tabindex="1" href="index.html">Главная</a>
-            <a tabindex="2" href="about.html">Обо мне</a>
-            <a tabindex="3" class="current" href="#top">Образование</a>
-            <a tabindex="4" href="experience.html">Резюме</a>
-            <a tabindex="5" href="skills.html">Желаемая должность</a>
-            <a tabindex="6" href="cases.html">Портфолио</a>
+        <a tabindex="1" href="index.html">Главная</a>
+        <a tabindex="2" href="about.html">Обо мне</a>
+        <a tabindex="3" class="current" href="#top">Образование</a>
+        <a tabindex="4" href="experience.html">Резюме</a>
+        <a tabindex="5" href="skills.html">Желаемая должность</a>
+        <a tabindex="6" href="cases.html">Портфолио</a>
     </div>
+    <ul class="breadcrumb">
+        <li>
+            <!-- КНОПКА МЕНЮ -->
+            <button class="openbtn" onclick="openNav()">Открыть меню</button>
+        </li>
+    
+        <li>
+            <a tabindex="7" href="index.html">Главная</a>
+        </li>
+        <li>
+            <a href="#top">Обо мне</a>
+        </li>
+    </ul>
+    <!-- КОНЕЦ МЕНЮ -->
 
     <div class="main">
-        <div class="header">
-            <nav>
-                <ul class="breadcrumb">
-                <!-- КНОПКА МЕНЮ -->
-                    <li>
-        <button class="openbtn" onclick="openNav()">Открыть меню</button>
-                    </li>
-                <!-- КОНЕЦ МЕНЮ -->
-                    <li><a tabindex="7" href="index.html">Главная</a></li>
-                    <li>Обо мне</li>
-                </ul>
-            </nav>
-        </div>
-
-<div class="content first"><h1 class="h1">Образование, места учёбы</h1></div>
         <div class="content second">
+            <h1 class="h1">Образование, места учёбы</h1>
             <h2 class="h2">2020. Дополнительное образование и повышение квалификации</h2>
             В 2020 году я прошёл очный курс по цифровому маркетингу на базе университета ИТМО. Я решил пройти этот курс, потому что мне в некотором роде интересен маркетинг и реклама в сетях Яндекс Директ и Google AdWords. Я пробовал разбираться в этой теме самостоятельно, но процесс шёл слишком медленно. Понадеявшись получить более глубокий экскурс в мир маркетинга, я выбрал ИТМО. Курс позволил мне углубить свои знания в интернет маркетинге, но не дал так желаемого мной экскурса в мир маркетинга, только базу. Свои рекламные компании я запускать не стал, потому что это стоило бы мне денег, к тому же необходимости в саморекламе я не испытывал.
         </div>
