--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="content-type" content="text/html">
     <title>Технический писатель - Владимир Маркиев.</title>
 
+    <!-- Preload fonts -->
+    <link rel="preload" href="style_fonts.css" as="style">
+
     <!-- Stylesheets -->
     <link rel="stylesheet" href="style_main.css">
     <link rel="stylesheet" href="style_nav.css">
@@ -46,58 +49,52 @@
     </noscript>
     <!-- /Yandex.Metrika counter -->
 
-    <script type="text/javascript" src="js_nav.js">
+    <script src="js_nav.js">
     </script>
 </head>
 
-<body>
 <a name="top"></a>
-<!-- МЕНЮ -->
 
+<body>
+    <!-- МЕНЮ -->
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0);" class="closebtn" onclick="closeNav()">X</a>
-       
-            <a tabindex="1" class="current" href="#top">Главная</a>
-            <a tabindex="2" href="about.html">Обо мне</a>
-            <a tabindex="3" href="education.html">Образование</a>
-            <a tabindex="4" href="experience.html">Резюме</a>
-            <a tabindex="5" href="skills.html">Желаемая должность</a>
-            <a tabindex="6" href="cases.html">Портфолио</a>
+        <a tabindex="1" class="current" href="#top">Главная</a>
+        <a tabindex="2" href="about.html">Обо мне</a>
+        <a tabindex="3" href="education.html">Образование</a>
+        <a tabindex="4" href="experience.html">Резюме</a>
+        <a tabindex="5" href="skills.html">Желаемая должность</a>
+        <a tabindex="6" href="cases.html">Портфолио</a>
     </div>
 
+    <ul class="breadcrumb">
+        <li>
+        <!-- КНОПКА МЕНЮ -->
+            <button class="openbtn" onclick="openNav()">Открыть меню</button>
+        </li>
+        <li>
+            <a tabindex="7" href="#top">Наверх</a></li>
+        <li>
+            <a href="#top">Главная</a>
+        </li>
+    </ul>
+    <!-- КОНЕЦ МЕНЮ -->
+
     <div class="main">
-
-        <div class="header">
-            <nav>
-                <ul class="breadcrumb">
-
-                <!-- КНОПКА МЕНЮ -->
-                    <li>
-                        <button class="openbtn" onclick="openNav()">Открыть меню</button>
-                    </li>
-                <!-- КОНЕЦ МЕНЮ -->
-
-                    <li><a tabindex="7" href="#top">Наверх</a></li>
-                    <li>Главная</li>
-
-                </ul>
-            </nav>   
-        </div>
-        <img src="img/myself.jpg" alt="Улыбающийся автор сайта приветствует вас." id="myself">
+        <img src="img/myself.jpg" alt="Улыбчивый автор сайта приветствует вас." id="myself">
         <div id="zooming" class="zoom">
             <span class="close">&times;</span>
             <img class="modal" id="img01">
             <div id="caption"></div>
         </div>
 
-        <script type="text/javascript" src="js_modal.js">
+        <script src="js_modal.js">
         </script>
-
-        <div class="content first"> <h1 class="h1">Сайт-визитка Маркиева Владимира</h1></div>
-        <div class="content second">
-            <p class="subheadline">Здравствуйте и добро пожаловать! Меня зовут Владимир Маркиев, и&nbsp;я&nbsp;создал этот сайт полностью своими руками.</p>
-            <p>Сайт служит мне своего рода электронной визиткой, не печатать же бумажные в самом деле. Главный недостаток сайта - много текста, мало картинок. Но я - художник и я так вижу, не люблю много говорить, но могу много писать.</p><br>
-            <p style="font-size: 1.2em; font-style: italic">Сейчас я не ищу работу, но сайт такой красивый, что я не хочу его удалять. Пусть будет визиткой.</p>
+            <div class="content">
+            <h1 class="h1">Владимир Маркиев - Технический писатель из Санкт-Петербурга</h1>
+            <h2 class="h2"></h2>
+            <p>Здравствуйте и добро пожаловать! Меня зовут Владимир Маркиев, и&nbsp;я&nbsp;создал этот сайт полностью своими руками.Сайт служит мне своего рода электронной визиткой, не печатать же бумажные в самом деле. Главный недостаток сайта - много текста, мало картинок. Но я - художник и я так вижу, не люблю много говорить, но могу много писать.</p><br>
+            <p>Сейчас я не ищу работу, но сайт такой красивый, что я не хочу его удалять. Пусть будет визиткой.</p>
             <!-- Я стараюсь быть открытым для всех, поэтому в разделе <a href="skills.html">"желаемая должность"</a> я перечислил все привлекающие меня должности.</p>
             <p>Можно было бы ограничить себя одной-единственной, но тогда бы мне пришлось создавать несколько сайтов. Да и было бы это совсем не честно. Честность для меня - превыше всего. Я не хочу кому-то впарить свою кандидатуру обманом. Пусть лучше сайт рекомендует меня потенциальному работодателю.</p>
             <p>В ответ я бы тоже хотел получить честный ответ - мнение о моей кандидатуре, обо мне. Главным в работе я считаю: 1. возможность проявить себя, 2. приятный дружный коллектив и 3. честное руководство. В принципе, я могу ужиться в любых условиях, но я бы очень-очень хотел не уживаться, а работать, заниматься делом: сложным, простым, однообразным, разнообразным, любым. Это дело обязательно будет любимым, потому что иначе не может быть, когда коллеги являются коллективом, а не случайно встретившимися людьми, где руководство справедливое, даже если строгое, где всё устроено открыто и честно.</p> --><br>
