Иконки в меню, переработал списки

--- a/about.html
+++ b/about.html
@@ -64,8 +64,8 @@
         <a tabindex="1" href="index.html">Главная</a>
         <a tabindex="2" class="current" href="#top">Обо мне</a>
         <a tabindex="3" href="education.html">Образование</a>
-        <a tabindex="4" href="experience.html">Резюме</a>
-        <a tabindex="5" href="skills.html">Желаемая должность</a>
+        <a tabindex="4" href="experience.html">Опыт работы</a>
+        <a tabindex="5" href="skills.html">Навыки</a>
         <a tabindex="6" href="cases.html">Портфолио</a>
     </div>
     <ul class="breadcrumb" id="breadcrumb">
