--- a/experience.html
+++ b/experience.html
@@ -68,8 +68,8 @@
         <a tabindex="1" href="index.html">Главная</a>
         <a tabindex="2" href="about.html">Обо мне</a>
         <a tabindex="3" href="education.html">Образование</a>
-        <a tabindex="4" class="current" href="#top">Резюме</a>
-        <a tabindex="5" href="skills.html">Желаемая должность</a>
+        <a tabindex="4" class="current" href="#top">Опыт работы</a>
+        <a tabindex="5" href="skills.html">Навыки</a>
         <a tabindex="6" href="cases.html">Портфолио</a>
     </div>
  
@@ -168,7 +168,7 @@
 
             <button class="accordion">Об опыте</button>
             <div class="panel">
-                <ul class="in-content-ul">
+                <ul class="list">
                     <li>Занимаюсь письменными переводами с русского на английский и с английского на русский:
                         <ul>
                             <li>Документов различной направленности;</li>
@@ -250,15 +250,15 @@
             <div class="subheadline">Сентябрь 2016 — ноябрь 2017</div>
             <p>Официальная штатная работа. Технический переводчик. Работа на стройплощадке здания Лахта Центр в Санкт-Петербурге. Работа, которой я горжусь. При возможности рассказываю всем, что я приложил руку к исторической стройке, пусть даже не совсем прямым образом. Эта работа во многом была лучшей - по оплате, по возможности не только представить то, о чём перевод в теории или по картинкам в интернете, но и увидеть своими глазами, спросить профессионалов, как это устроено, если что-то непонятно и требуются пояснения.</p>
             <p>Я переводил очень много, каждый день была работа, были тексты на перевод. О многих типах документов, которые нужно было переводить, я вообще никогда не слышал, темами вроде геодезии даже не думал заниматься, но на стройплощадке я смог познакомиться со всем этим и даже больше:</p>
-            <ul class="in-content-ul">
+            <ul class="list">
                 <li>Перевод строительной тематики:
-                    <ul>
+                    <!-- <ul>
                         <li>Документация на инженерные сстемы;</li>
                         <li>Рабочая и проектная документация;</li>
                         <li>Чертежи, технологические карты;</li>
                         <li>Планы производства работ (ППР, ППГР), спецификации;</li>
                         <li>Руководства для оборудования, строительной техники и другие;</li>
-                    </ul>
+                    </ul> -->
                 </li>
                 <li>Перевод в объёме от 10-12 страниц по 1800 знаков с пробелами в день;</li>
                 <li>Срочный перевод документов и перевод частей документов, распределённый на команду переводчиков;</li>
