--- a/skills.html
+++ b/skills.html
@@ -63,8 +63,8 @@
         <a tabindex="1" href="index.html">Главная</a>
         <a tabindex="2" href="about">Обо мне</a>
         <a tabindex="3" href="education.html">Образование</a>
-        <a tabindex="4" href="experience.html">Резюме</a>
-        <a tabindex="5" class="current" href="#top">Желаемая должность</a>
+        <a tabindex="4" href="experience.html">Опыт работы</a>
+        <a tabindex="5" class="current" href="#top">Навыки</a>
         <a tabindex="6" href="cases.html">Портфолио</a>
     </div>
 
@@ -92,18 +92,10 @@
             <br>
             <button class="accordion">Среди моих навыков:</button>
             <div class="panel">
-                <ul class="skills">
+                <ul class="list">
                     <li>Владею русским и английским языками. Русский - родной, английский - свободный (я на нём думаю иногда).</li>
                     <li>Внимателен к деталям. Делаю работу вдумчиво.</li>
-                    <li>Люблю IT, но не профессионал: <ul class="subskills">
-                            <li>Разбираюсь в HTML, CSS.</li>
-                            <li>Знаю компьютерное железо.</li>
-                            <li>Быстро изучаю новое ПО.</li>
-                            <li>Работал с облачными хранилищами и сервисами: Microsoft Azure, Google Cloud Platform, Google Drive, Office 365.</li>
-                            <li>Продвинутый пользователь ОС Windows. Имею многлетний опыт переустановки и настройки системы.</li>
-                            <li>Продвинутый пользователь ОС Android. Также имею опыт переустановки и настройки.</li>
-                            <li>Знаком с ОС Linux на уровне пользователя, умею решать задачи с помощью поиска информации.</li>
-                        </ul>
+                    <li>Люблю IT, но не профессионал:
                     </li>
                     <li>Обладаю пользовательскими навыками работы в Photoshop, Lightroom.</li>
                     <li>Отлично владею CAT-Программами.</li>
