--- a/education.html
+++ b/education.html
@@ -62,8 +62,8 @@
         <a tabindex="1" href="index.html">Главная</a>
         <a tabindex="2" href="about.html">Обо мне</a>
         <a tabindex="3" class="current" href="#top">Образование</a>
-        <a tabindex="4" href="experience.html">Резюме</a>
-        <a tabindex="5" href="skills.html">Желаемая должность</a>
+        <a tabindex="4" href="experience.html">Опыт работы</a>
+        <a tabindex="5" href="skills.html">Навыки</a>
         <a tabindex="6" href="cases.html">Портфолио</a>
     </div>
     <ul class="breadcrumb" id="breadcrumb">
