--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <a tabindex="1" class="current" href="#top">Главная</a>
         <a tabindex="2" href="about.html">Обо мне</a>
         <a tabindex="3" href="education.html">Образование</a>
-        <a tabindex="4" href="experience.html">Резюме</a>
-        <a tabindex="5" href="skills.html">Желаемая должность</a>
+        <a tabindex="4" href="experience.html">Опыт работы</a>
+        <a tabindex="5" href="skills.html">Навыки</a>
         <a tabindex="6" href="cases.html">Портфолио</a>
     </div>
 
