Переписал текст на страницах, начал страницу с навыками

--- a/education.html
+++ b/education.html
@@ -83,34 +83,31 @@
 
     <div class="main">
         <div class="content">
-            <h1 class="h1">Образование, места учёбы</h1>
-            <h2 class="h2">2020. Дополнительное образование и повышение квалификации</h2>
-            В 2020 году я прошёл очный курс по цифровому маркетингу на базе университета ИТМО. Я решил пройти этот курс, потому что мне в некотором роде интересен маркетинг и реклама в сетях Яндекс Директ и Google AdWords. Я пробовал разбираться в этой теме самостоятельно, но процесс шёл слишком медленно. Понадеявшись получить более глубокий экскурс в мир маркетинга, я выбрал ИТМО. Курс позволил мне углубить свои знания в интернет маркетинге, но не дал так желаемого мной экскурса в мир маркетинга, только базу. Свои рекламные компании я запускать не стал, потому что это стоило бы мне денег, к тому же необходимости в саморекламе я не испытывал.
+            <h1 class="h1">Места обучения Маркиева Владимира</h1>
+            <h2 class="h2">2020. Повышение квалификации</h2>
+            <p>В 2020 году я прошёл очный курс по цифровому маркетингу на базе университета ИТМО. Я сталкивался с рекламными сетями и раньше, когда совсем не так подробно. Курс помог мне разложить по полочкам понятия источников трафика, определения целевой аудитории, стоимости за клик и другие. Это было полезно. Курс помог мне понять, что профессионально заниматься настройкой таргета и рекламой в соцсетях я не хочу. Кроме того, курс дал мне идею создать свой сайт.</p>
         </div>
 
         <div class="content">
-            <h2 class="h2">2016 - 2019. Аспирантура - Санкт-Петербургский Государственный Университет (СПБГУ)</h2>
-            Ещё со школы у меня была мысль о том, что я должен поступить в аспирантуру, так как ещё тогда я подсчитал, что в этом случае, к концу обучения я достигну непризывного возраста. Позже, в бакалавриате и магистратуре я думал, что я стану доктором наук. Однако, реальность жестока. Во-первых, в большом городе, живя самостоятельно, нужно как-то зарабатывать. Во-вторых, степерь доктора наук меня перестала привлекать. Я разочаровался в науке, преподавать в университете я не хотел, да и вообще преподавание - это не моё. Как здорово, что я это понял уже после 4 лет в педагогическом университете! Я отучился в аспирантуре три года, один из которых провёл в академическом отпуске. После этого я достиг непризывного возраста и отчислился. Вот вам и юношеские мечты о докторской степени.
+            <h2 class="h2">2016 - 2019. Аспирантура в СПБГУ</h2>
+            <p>Ещё в школе я мечтал поступить в аспирантуру. Позже, в бакалавриате и магистратуре я думал, что стану доктором наук. Но реальность внесла свои коррективы. Во-первых, нужно было зарабатывать достаточно средств, чтобы снимать квартиру. Во-вторых, степень доктора наук меня перестала меня привлекать. Во-первых, чтобы успешно закончить аспирантуру, я должен был написать точное количество работ, качество которых никак не определялось. Во-вторых, никто бы их не стал читать. В-третьих, преподавать в университете у меня не было желания. Как здорово, что я это понял после 4 лет в педагогическом университете! Я отучился в аспирантуре три года, один из которых провёл в академическом отпуске. После этого я достиг непризывного возраста и отчислился.</p>
         </div>
 
         <div class="content">
-            <h2 class="h2">2014 - 2016. Магистратура - Санкт-Петербургский Государственный Экономический Университет (СПБГЭУ)</h2>
-            Ещё в бакалавриате я принял участие в нескольких конференциях по теме диплома под научным руководством д.ф.н. профессора Татьяны Альбертовны Клепиковой. Она же предложила мне пойти в магистратуру. Я не мог не согласиться на аспирантуру по специальности "теория перевода и межкультурная коммуникация". Я хотел быть переводчиком ещё со школы, но как-то не сразу сложилось. К тому же магистратура предполагала переезд в новый город, учиться в Санкт-Петербургском Государственном Экономическом Университете. С моим везением мне посчастливилось попасть под очередной эксперимент (третий по счёту со школы). В этот раз три университета (ИНЖЭКОН, ГУСЭ, ФИНЭК) объединялись в один (СПБГЭУ). Поэтому я учился в не просто в университете, а в институте магистратуры внутри университета. У магистрантов даже было отдельное здание.
+            <h2 class="h2">2014 - 2016. Магистратура в СПБГЭУ</h2>
+            <p>В бакалавриате я выступил на паре конференций по теме диплома под научным руководством д.ф.н. профессора Татьяны Альбертовны Клепиковой. Она же предложила мне пойти в магистратуру. Магистратура была по специальности "теория перевода и межкультурная коммуникация". Я согласился, потому что мечтал стать переводчиком со школы. Ещё больше меня привлекал переезд в Санкт-Петербург. Мне случилось попасть под эксперимент - объединение трёх университетов. ИНЖЭКОН, ГУСЭ и ФИНЭК объединялись в СПБГЭУ. Поэтому я учился в институте магистратуры внутри университета.</p>
         </div>
 
         <div class="content">
-            <h2 class="h2">2010 - 2014. Бакалавриат - РГПУ им. А.И. Герцена (Выборгский филиал)</h2>
-            Мой год выпуска из школы - 2010 - был первым годом ЕГЭ в нашем районе, поэтому я был одним из первых, кто попал под этот тогда ещё эксперимент. Сначала я хотел поступать в Санкт-Петербург, подавал документы даже в ФИНЭК. Но, когда я увидел число льготников, медалистов и просто отличников, решил подавать документы в (как я тогда думал) богом забытый Выборгский Филиал Герценовского университета. В ВФ Герцена как раз испытывали Болонский процесс - впервые были введены программы бакалавриата. С 2009 я бы ещё поступил на специалитет, но с 2010 началась трёхступенчатая система образования - бакалавриат - магистратура - аспирантура. Поступил я успешно, правда моих баллов ЕГЭ было немного мало (я никогда не был силён в математике), поэтому я был в конце списка зачисленных. Правда, тех, кто смог доучиться, написать диплом и ещё поступить в магистратуру можно сосчитать по пальцам одной руки. Я в их числе.
-        </div>
-
-        <div class="content">
-            <h2 class="h2">Английский язык и компьютерная лингводидактика</h2>
-            Моя специальность в ВФ Герцена называлась "Английский язык и компьютерная лингводидактика". Это дикое название прдразумевает обучение при помощи компьютерных технологий. Впрочем, готовили из нас обычных филологов. Тем не менее, Выборгский Филиал РГПУ им. А.И. Герцена навсегда остался в моей памяти как приятное время. Я до сих пор стараюсь как можно чаще приезжать в Выборг - город, о котором я знаю очень многое.
+            <h2 class="h2">2010 - 2014. Бакалавриат в РГПУ им. А.И. Герцена (ВФ)</h2>
+            <p>Сначала я хотел поступать в Санкт-Петербург, но почти все места были заняты медалистами и льготниками. Оставшиеся места заняли отличники с 300 баллами ЕГЭ из 300 возможных. В ВФ Герцена впервые была введена трёхступенчатая ступень высшего образования - бакалавриат, магистратура и аспирантура. Я был одним из немногих, кто доучился до конца, написал дипломную работу и успешно сдал экзамены.</p>
+            
+            <p>Моя специальность в ВФ Герцена называлась "Английский язык и компьютерная лингводидактика". Это значит обучение английскому языку при помощи компьютерных технологий. Готовили из нас обычных филологов. Выборгский Филиал РГПУ им. А.И. Герцена навсегда остался в моей памяти как приятное время.</p>
         </div>
 
         <div class="content">
             <h2 class="h2">Салминская средняя школа</h2>
-            Я ходил в обычную общеобразовательную школу в небольшом посёлке в Карелии. В школе мне хорошо давались гуманитарные предметы: русский язык, английский язык, литература и очень плохо точные предметы - алгебра, геометрия. Особенно хорошо мне давался английский. Настолько хорошо, что на каждом уроке у меня была пятёрка. К последним классам я очень сильно захотел стать переводчиком. Эта идея поглотила меня полностью, я даже пытался выполнить тесты в бюро переводов. Сейчас это, конечно смешно, потому что я понимаю, насколько слабым был тогда мой уровень языка. Даже сейчас я понимаю, что всегда найдётся кто-то ещё лучше, ещё профессиональней и ещё опытней.
+            <p>Я ходил в обычную общеобразовательную школу в небольшом посёлке в Карелии. В школе мне хорошо давались гуманитарные предметы: русский язык, английский язык, литература и очень плохо точные предметы: алгебра и геометрия. Английский язык давался мне настолько хорошо, что на каждом уроке у меня была пятёрка. К последним классам я очень сильно захотел стать переводчиком. Я даже пытался выполнить тесты бюро переводов и работать с переводческими программами. На самом деле мой уровень языка был не очень высокий. Это важный урок для меня. Теперь я понимаю, что всегда найдётся кто-то ещё лучше, ещё профессиональней и ещё опытней.</p>
         </div>
 
         <div class="footer">
