--- a/skills.html
+++ b/skills.html
@@ -84,19 +84,27 @@
 
     <div class="main">
         <div class="content">
-            <h1 class="h1">Навыки</h1>
-            <h2 class="h2">Мои навыки, умения, способности</h2>
+            <h1 class="h1">Мои навыки как технического писателя</h1>
             
-           <p>К счастью, я умею не только переводить, поэтому я рассматриваю вакансии в смежных областях. Особенно меня привлекают сфера IT и должность технического писателя. Я умею многое, но многому мне ещё предстоит научиться. Для меня важно иметь возможность развития, использовать английский язык и находиться в приятной рабочей атмосфере. Я с удовольствием готов работать, например, техническим писателем, потому что мне нравится описывать продукты, разбираться в деталях, узнавать старое по-новому и новое по-старому. В принципе, это похоже и на техническую поддержку.</p>
-            <p>Я всегда стараюсь запоминать что-то новое, что я узнал самостоятельно, потому что было интересно, или в работе, потому что было нужно для решения задачи. Я умею анализировать, раскладывать на составляющие, синтезировать, собирая знание воедино по крупицам. Даже этот сайт создан не исключительно на собственных знаниях, многое я искал в интернете, изучал элементы и менял их под свой вкус.</p> 
-            <br>
-            <button class="accordion">Среди моих навыков:</button>
+            <p>Мне очень нравится профессия технического писателя и постоянно учусь новому. Свой сайт я обновляю реже, чем свои навыки. Поэтому, о навыках лучше спрашивать меня лично.</p>
+            <button class="accordion">Что я уже умею:</button>
             <div class="panel">
                 <ul class="list">
+                    <li>Знаю, как работают ключи, повторно использовать элементы в DITA, смогу создать PDF, HTML или другой документ при помощи DITA OT, сумею отредактировать шаблоны DITA OT, но скорей всего не сумею создать сложный шаблон.</li>
+                    <li>Свободно пишу на Markdown. Это очень простой язык разметки для простых задач.</li>
+                    <li>Умею писать и создавать PDF или HTML на AsciiDoc. Я писал на нём совсем немного, но язык приятный. Я бы с большим удовольствием писал на нём.</li>
+                    <li>Умею работать с YouTrack, ставить задачи, оценивать время на выполнение и отчитываться о проделанной работе.</li>
+                    <li>Люблю Linux, знаю основные команды терминала, писал <a href="cases.html#linux">статью</a> по теме. При помощи гугла, инструкций и интуиции могу даже настроить DNS.</li>
+                    <li>git из терминала и gui</li>
+                    <li>новый софт</li>
+                    <li>задаю вопросы</li>
+                    <li>troubleshoting диагностика</li>
+                    <li>понимаю и объясняю разработчиков</li>
+                    <li>виртуализация</li>
+                    <li>iis</li>
+                    <li>html/css</li>
                     <li>Владею русским и английским языками. Русский - родной, английский - свободный (я на нём думаю иногда).</li>
                     <li>Внимателен к деталям. Делаю работу вдумчиво.</li>
-                    <li>Люблю IT, но не профессионал:
-                    </li>
                     <li>Обладаю пользовательскими навыками работы в Photoshop, Lightroom.</li>
                     <li>Отлично владею CAT-Программами.</li>
                     <li>Пробовал задавать запросы SQL, но подробнее не интересовался.</li>
